<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:paddingHorizontal="32dp"
    >

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mogra"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="56sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutForm"
        android:text="Sign up to see stories from your friends." />

    <LinearLayout
        android:id="@+id/linearLayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutTop"
        >
        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"
            />
        <EditText
            android:id="@+id/ed_register_email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"
            />
        <EditText
            android:id="@+id/ed_register_password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutForm"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/action_register"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:text="@string/register_button_text"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? " />

            <TextView
                android:id="@+id/tv_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>