<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mogra"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutTop"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottom"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        android:gravity="center">

        <EditText
            android:id="@+id/ed_login_email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"
            />

        <EditText
            android:id="@+id/ed_login_password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:background="@drawable/edit_text_background"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTop"
        android:gravity="center">

        <Button
            android:id="@+id/action_login"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:text="@string/login_button_text"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account? " />

            <TextView
                android:id="@+id/tv_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>