<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetLeft="16dp"
            android:contentInsetStart="16dp"
            app:contentInsetLeft="16dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/action_back"
                    android:layout_width="48dp"
                    android:layout_height="32dp"
                    android:background="@null"
                    android:contentDescription="@string/text_back_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_back"
                    app:tint="@color/black"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:fontFamily="@font/mogra"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mogra"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        android:textAlignment="center"
        tools:text="Username"/>

    <Button
        android:id="@+id/action_logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/logout_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />


</androidx.constraintlayout.widget.ConstraintLayout>